--- a/app/views/08/location.html
+++ b/app/views/08/location.html
@@ -19,7 +19,7 @@
   <div class="govuk-form-group">
     <h1 class="govuk-label-wrapper">
       <label class="govuk-label govuk-label--m" for="country">
-        Enter a town, city or postcode
+        Enter a town, city or postcode (optional)
       </label>
     </h1>
     <select class="govuk-select" id="location" name="location"
