--- a/app/views/08/macros/clear-filter-link.njk
+++ b/app/views/08/macros/clear-filter-link.njk
@@ -13,6 +13,6 @@
   {% endfor %}
   {% set queryString = newQuery | join('&') %}
   <p style="margin-top: 10px;">
-    <a href="?{{ queryString }}">Clear filters</a>
+    <a href="?{{ queryString }}">Clear filter</a>
   </p>
 {% endmacro %}
