--- a/app/views/08/start-page.html
+++ b/app/views/08/start-page.html
@@ -27,6 +27,8 @@
             <li><a href="https://dfedigital.atlassian.net/browse/FAB-331">FAB-331</a> accessibility improvements - including 'clear filters' links for each filter group</li>
             <li><a href="https://dfedigital.atlassian.net/browse/FAB-372">FAB-372</a> exception pages</li>
             <li>added basic autocomplete on town, city or postcode input</li>
+            <li>updated header style</li>
+            <li>removed location from filters</li>
         </ul>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
