--- a/app/views/08/location.html
+++ b/app/views/08/location.html
@@ -268,7 +268,7 @@
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
-          How far would you be happy to travel?
+          How far would you be happy to travel? (optional)
         </h1>
       </legend>
       <div class="govuk-radios" data-module="govuk-radios">
