--- a/app/views/08/index.html
+++ b/app/views/08/index.html
@@ -11,7 +11,7 @@
 
 
         <h2 class="govuk-heading-l">
-          Find a course or apprenticeship 
+          Find education and training opportunities 
         </h2>
     
         <p>Whether you're already in education or training, or coming back after a break, we can help you work out what to do next.</p>
