--- a/app/views/08/location.html
+++ b/app/views/08/location.html
@@ -268,7 +268,7 @@
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
-          How far would you be happy to travel? (optional)
+          How far are you able to travel? (optional)
         </h1>
       </legend>
       <div class="govuk-radios" data-module="govuk-radios">
@@ -300,6 +300,12 @@
           <input class="govuk-radios__input" id="travel-location-6" name="travel-location" type="radio" value="30 miles">
           <label class="govuk-label govuk-radios__label" for="travel-location-6">
             Up to 30 miles
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="travel-location-7" name="travel-location" type="radio" value="Over 30 miles">
+          <label class="govuk-label govuk-radios__label" for="travel-location-7">
+            Over 30 miles
           </label>
         </div>
 
