--- a/app/views/08/check-answers.html
+++ b/app/views/08/check-answers.html
@@ -43,7 +43,9 @@
     {% elseif data['travel-location'] == '15 miles' %}
     Up to 15 miles
     {% elseif data['travel-location'] == '25 miles' %}
-    Up to 25 miles
+    Up to 30 miles
+    {% elseif data['travel-location'] == 'Over 30 miles' %}
+    Over 30 miles
     {% else %}
       Not provided
     {% endif %}
