--- a/app/views/08/search-results-no-results.html
+++ b/app/views/08/search-results-no-results.html
@@ -18,13 +18,17 @@
     You searched for: [subjects/interests], [location], [distance].
   </div>
 
-   <p>Try making your search broader.  </p>
+   <p>It looks like we can't find anything based on your answers. </p>
+ 
+   <p> Here are some things you can try  </p>
+   <ul class="govuk-list govuk-list--bullet">
+    <li>remove a filter </li>
+    
+   <li> make your search broader </li>
+    
+   <li> increase the distance or try a different location</li>
 
-<p>If you searched for something really specific try using a more general description. For example instead of searching for ‘set designer’ try ‘creative and artistic jobs’.   </p>
-
-<p>Or you could increase the distance or <a href="location">try a different location</a>. </p>
-
-<p>Or <a href="courses-2">browse all courses and training near to you</a>. </p>
+  </ul>
 
   </div>
 </div>
