--- a/app/views/08/course-detail.html
+++ b/app/views/08/course-detail.html
@@ -169,6 +169,8 @@
   text: "Go to course"
 }) }}
 
+<p>The information we show you about a course comes from the provider. If you want to know more about a course visit their website. You can also email or call them if you have any questions or want to discuss your options.</p>
+
 
 {% elseif course.type == "Apprenticeship" %}
 
@@ -336,6 +338,8 @@
   text: "Go to Apprenticeship opportunity"
 }) }}
 
+<p>The information we show you about a course comes from the provider. If you want to know more about a course visit their website. You can also email or call them if you have any questions or want to discuss your options.</p>
+
 {% else %}
 
 {{ govukSummaryList({
@@ -478,6 +482,8 @@
 {{ govukButton({
   text: "Go to course"
 }) }}
+
+<p>The information we show you about a course comes from the provider. If you want to know more about a course visit their website. You can also email or call them if you have any questions or want to discuss your options.</p>
 
 {% endif %}
 
