Updated header and 08 start page

--- a/app/views/08/start-page.html
+++ b/app/views/08/start-page.html
@@ -29,6 +29,7 @@
             <li>added basic autocomplete on town, city or postcode input</li>
             <li>updated header style</li>
             <li>removed location from filters</li>
+            <li>added AI related content</li>
         </ul>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
