--- a/app/views/08/courses.html
+++ b/app/views/08/courses.html
@@ -12,14 +12,18 @@
 
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">Your search results</h1>
-    <p class="govuk-body-l">Showing {{ totalResults }} courses {% if data['location'] %} near <strong>{{ data['location'] }}</strong>{% endif %} {% if data['interest-1'] %} for <strong> {{ data['interest-1'] }}  </strong> {% endif %} {% if data['interest-2'] %}, <strong> {{ data['interest-2'] }}  </strong> {% endif %} {% if data['interest-3'] %}, <strong> {{ data['interest-3'] }}  </strong> {% endif %} at <strong> 
-      {% if data['qualification-level'] == 'level-1-2' %}
-      Level 1 or 2
-      {% elseif data['qualification-level'] == 'level-3' %}
-      Level 3
-      {% elseif data['qualification-level'] == 'level-4-7' %}
-      Level 4 to 7
-      {% endif %}</strong></p>
+    <p class="govuk-body-l">Showing {{ totalResults }} courses {% if data['location'] %} near <strong>{{ data['location'] }}</strong>{% endif %} {% if data['interest-1'] %} for <strong> {{ data['interest-1'] }}  </strong> {% endif %} {% if data['interest-2'] %}, <strong> {{ data['interest-2'] }}  </strong> {% endif %} {% if data['interest-3'] %}, <strong> {{ data['interest-3'] }}  </strong> {% endif %}  
+      {% if data['qualification-level'] %} at <strong> 
+    {% for level in data['qualification-level'] %}
+      {% if level == 'level-1-2' %}
+         Level 1 or 2,
+      {% elseif level == 'level-3' %}
+         Level 3
+      {% elseif level == 'level-4-7' %}
+         Level 4 to 7,
+      {% endif %}
+    {% endfor %}
+  {% endif %}</strong></p>
 
       <p><a href="clear-session-and-go">Search again</a> </p>
   
