Updated search results header to remove levels

--- a/app/views/08/start-page.html
+++ b/app/views/08/start-page.html
@@ -30,6 +30,7 @@
             <li>updated header style</li>
             <li>removed location from filters</li>
             <li>added AI related content</li>
+            <li>added truncation to course overview</li>
         </ul>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
