--- a/app/views/08/courses.html
+++ b/app/views/08/courses.html
@@ -367,7 +367,7 @@ Show filters
             <details class="govuk-details govuk-!-margin-top-2" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
-                  Read more about the course overview
+                  Read more of the course overview
                 </span>
               </summary>
               <div class="govuk-details__text">
